<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="32dp"
    tools:context=".activity.BayarActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="32dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pembayaran"
                android:textSize="18sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:enabled="false"
                android:layout_marginTop="32dp">

                <EditText
                    android:id="@+id/etTotal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:autofillHints="false"
                    android:textColor="@color/black"
                    android:background="@drawable/edit_text"
                    android:hint="@string/total_transaksi"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:enabled="false"
                android:layout_marginTop="32dp">

                <EditText
                    android:id="@+id/etQty"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:autofillHints="false"
                    android:textColor="@color/black"
                    android:background="@drawable/edit_text"
                    android:hint="@string/quantity"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="16dp">

                <EditText
                    android:id="@+id/etJumlah"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:autofillHints="false"
                    android:background="@drawable/edit_text"
                    android:hint="@string/jumlah"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:enabled="false"
                android:layout_marginTop="16dp">

                <EditText
                    android:id="@+id/etKembali"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:autofillHints="false"
                    android:background="@drawable/edit_text"
                    android:hint="@string/kembali"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:id="@+id/tasd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/pilih_jenis_paket"
                android:textSize="15sp"
                />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <Spinner
                    android:padding="8dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/white"
                    android:id="@+id/jasa_paket"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:entries="@array/jenis_paket"
                    android:prompt="@string/paket"/>
                <Button
                    android:id="@+id/btn_check_ongkir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/button"
                    android:text="@string/check_ongkir"
                    android:textColor="@color/white" />
            </LinearLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="16dp">

                <EditText
                    android:id="@+id/etOngkir"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/edit_text"
                    android:hint="@string/ongkir"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>   <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="16dp">

                <EditText
                    android:id="@+id/etTujuan"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/edit_text"
                    android:hint="@string/tujuan"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:id="@+id/title_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/upload_bukti_pembayaran"
                android:textSize="15sp"
         />
            <ImageView
                android:id="@+id/img_thumb"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="20dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_background"/>
            <Button
                android:id="@+id/btn_bayar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/button"
                android:text="@string/kirim_pembayaran"
                android:textColor="@color/white" />
        </LinearLayout>

</ScrollView>